[tool.poetry]
name = "yasr"
version = "0.1.1"
description = "String replacer cli tool."
authors = ["Emrecan Altinsoy <emrecanaltinsoy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pyinquirer = "1.0.3"
click = "8.1.3"
typer = "0.4.2"
pydantic = "1.9.1"
tqdm = "4.64.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
